<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_patient"
            android:icon="@drawable/ic_patients"
            android:title="@string/menu_patient" />
        <item
            android:id="@+id/nav_shelterHome"
            android:icon="@drawable/ic_shelter_home"
            android:title="@string/menu_shelterHome" />
        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_members"
            android:title="@string/menu_members" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/switchrolemenu"
            android:icon="@drawable/ic_switch_role_image_foreground"
            android:title="@string/menu_switchRole" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_menu_admin"
            android:icon="@drawable/ic_switch_admin_image_foreground"
            android:title="@string/switch_admin" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_image_foreground"
            android:title="@string/menu_logout" />
    </group>

</menu>