<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dualcolorback_ground"
    tools:context=".presentation.activity.EditProfileActivity">


    <RelativeLayout
        android:id="@id/profile_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/_50sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_person"
            android:visibility="visible"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_salutation_layout"
        style="@style/PatientRegistrationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salutation"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_salutation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#F8F5F5"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/personNameLayout"
        style="@style/PatientRegistrationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/person_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_salutation_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#F8F5F5"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="100" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_gender_layout"
        style="@style/PatientRegistrationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#F8F5F5"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:maxLength="100" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email_etLayout"
        style="@style/PatientRegistrationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_gender_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#F8F5F5"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:maxLength="100" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateOfBirthLayout"
        style="@style/PatientRegistrationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_etLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#F8F5F5"
            android:focusable="false"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:maxLength="100" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/profile_image_edit_layout"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:orientation="vertical"
        android:src="@drawable/ic_edit_image"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_image_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile_details"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Update"
        android:background="@drawable/bg_shape_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirthLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>