<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.AddressDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/footer"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/linearlayoutAddressPopup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/addressPopUpHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/PatientRegistrationStyle"
                        android:id="@+id/streetAddLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street_address">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/streetAdd"
                             android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:backgroundTint="#F8F5F5"
                            android:gravity="center"
                            android:inputType="textEmailAddress"
                            android:maxLength="50" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/PatientRegistrationStyle"
                        android:id="@+id/cityLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:backgroundTint="#F8F5F5"
                            android:gravity="center"
                            android:inputType="textEmailAddress"
                            android:maxLength="30"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/PatientRegistrationStyle"
                        android:id="@+id/distLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/district">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:backgroundTint="#F8F5F5"
                            android:gravity="center"
                            android:inputType="textEmailAddress"
                            android:maxLength="100"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/PatientRegistrationStyle"
                        android:id="@+id/stateLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:backgroundTint="#F8F5F5"
                            android:gravity="center"
                            android:inputType="textEmailAddress"
                            android:maxLength="100"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/PatientRegistrationStyle"
                        android:id="@+id/pincodeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ZipPin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pincode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:backgroundTint="#F8F5F5"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="6"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                        android:id="@+id/footer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:orientation="horizontal"
                        >

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnBackAddres"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0.5"
                            android:background="@drawable/rounded_corner_button"
                            android:text="back"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:textColor="#000000" />


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnNextAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="0.5"
                            android:background="@drawable/rounded_green_button"
                            android:text="Next"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:textColor="#000000" />

                    </LinearLayout>


                </LinearLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</FrameLayout>